# sanka-cli

./: AGENTS.md  README.md  pyproject.toml
.github/workflows/: release.yml
docs/: commands.md
sanka_cli/: client.py  config.py  main.py  runtime.py
sanka_cli/commands/: ai.py  auth.py  workflows.py
scripts/: render_homebrew_formula.py
tests/: test_cli.py
