[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "sanka-cli"
version = "0.1.2"
description = "Public command-line interface for Sanka"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Sanka" },
]
dependencies = [
  "click>=8.1.8",
  "httpx>=0.27.2",
  "keyring>=25.6.0",
  "platformdirs>=4.3.6",
  "rich>=13.9.4",
]

[project.scripts]
sanka = "sanka_cli.main:main"

[project.urls]
Homepage = "https://github.com/sankaHQ/sanka-cli"
Documentation = "https://github.com/sankaHQ/sanka-cli/blob/main/README.md"
Repository = "https://github.com/sankaHQ/sanka-cli"
Issues = "https://github.com/sankaHQ/sanka-cli/issues"

[dependency-groups]
dev = [
  "pytest>=8.4.1",
  "ruff>=0.12.0",
]

[tool.hatch.build.targets.wheel]
packages = ["sanka_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "ARG"]

[tool.ruff.format]
quote-style = "double"
